compiler/lume_parse/src/snapshots/lume_parse__tests__conditional_snapshots@if_else_empty.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Statement, \"if true { } else { }\")"
---
SOURCE_FILE@0..14
  EXPR_STMT@0..14
    IF_EXPR@0..14
      IF_KW@0..2 "if"
      LITERAL@2..6
        BOOLEAN_LIT@2..6 "true"
      BLOCK@6..8
        LEFT_BRACE@6..7 "{"
        STMT_LIST@7..7
        RIGHT_BRACE@7..8 "}"
      ELSE_KW@8..12 "else"
      BLOCK@12..14
        LEFT_BRACE@12..13 "{"
        STMT_LIST@13..13
        RIGHT_BRACE@13..14 "}"
