compiler/lume_parse/src/snapshots/lume_parse__tests__conditional_snapshots@if_statements.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Statement, \"if true { let a = 0; let b = 0; }\")"
---
SOURCE_FILE@0..33
  EXPR_STMT@0..33
    IF_EXPR@0..33
      IF_KW@0..2 "if"
      WHITESPACE@2..3 " "
      LIT_EXPR@3..7
        LITERAL@3..7
          BOOLEAN_LIT@3..7 "true"
      WHITESPACE@7..8 " "
      BLOCK@8..33
        LEFT_BRACE@8..9 "{"
        WHITESPACE@9..10 " "
        LET_STMT@10..20
          LET_KW@10..13 "let"
          WHITESPACE@13..14 " "
          NAME@14..15
            IDENT@14..15 "a"
          WHITESPACE@15..16 " "
          ASSIGN@16..17 "="
          WHITESPACE@17..18 " "
          LIT_EXPR@18..19
            LITERAL@18..19
              INTEGER_LIT@18..19 "0"
          SEMICOLON@19..20 ";"
        WHITESPACE@20..21 " "
        LET_STMT@21..31
          LET_KW@21..24 "let"
          WHITESPACE@24..25 " "
          NAME@25..26
            IDENT@25..26 "b"
          WHITESPACE@26..27 " "
          ASSIGN@27..28 "="
          WHITESPACE@28..29 " "
          LIT_EXPR@29..30
            LITERAL@29..30
              INTEGER_LIT@29..30 "0"
          SEMICOLON@30..31 ";"
        WHITESPACE@31..32 " "
        RIGHT_BRACE@32..33 "}"
