compiler/lume_parse/src/snapshots/lume_parse__tests__conditional_snapshots@inequality_empty.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Statement, \"if a != 1 { }\")"
---
SOURCE_FILE@0..8
  EXPR_STMT@0..8
    IF_EXPR@0..8
      IF_KW@0..2 "if"
      BIN_EXPR@2..6
        VARIABLE_EXPR@2..3
          IDENT@2..3 "a"
        NEQUAL@3..5 "!="
        LITERAL@5..6
          INTEGER_LIT@5..6 "1"
      BLOCK@6..8
        LEFT_BRACE@6..7 "{"
        STMT_LIST@7..7
        RIGHT_BRACE@7..8 "}"
