compiler/lume_parse/src/snapshots/lume_parse__tests__construction_snapshots@empty.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Statement, \"Foo { };\")"
---
SOURCE_FILE@0..8
  EXPR_STMT@0..8
    CONSTRUCT_EXPR@0..7
      PATH@0..4
        PATH_SEGMENT@0..4
          PATH_TYPE@0..4
            IDENT@0..3 "Foo"
            WHITESPACE@3..4 " "
      LEFT_BRACE@4..5 "{"
      WHITESPACE@5..6 " "
      RIGHT_BRACE@6..7 "}"
    SEMICOLON@7..8 ";"
