compiler/lume_parse/src/snapshots/lume_parse__tests__construction_snapshots@empty_self.snap
---
source: compiler/lume_parse/src/tests.rs
assertion_line: 165
expression: "parse(Target :: Statement, \"Self { };\")"
---
SOURCE_FILE@0..7
  EXPR_STMT@0..7
    CONSTRUCT_EXPR@0..6
      PATH@0..4
        PATH_TYPE@0..4
          IDENT@0..4 "Self"
      LEFT_BRACE@4..5 "{"
      RIGHT_BRACE@5..6 "}"
    SEMICOLON@6..7 ";"
